# rlbook

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  env_setup.sh  pyproject.toml  requirements_conda.yml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
experiments/: bandits.py  plotters.py
experiments/ch2_bandits/: bandits.py  prototype_bandits.ipynb  run.py
experiments/ch2_bandits/configs/: defaults.yaml
experiments/ch2_bandits/notebooks/: RL-greedy_epsilon_bandit.ipynb  prototype_bandits.ipynb
experiments/ch2_bandits/outputs/bandit/hydra/rlbook.bandits.EpsilonGreedy/2024-06-12_01-20-03/wandb/: latest-run
experiments/ch2_bandits/outputs/bandit/hydra/rlbook.bandits.EpsilonGreedy/2024-06-12_01-20-03/wandb/run-20240612_012004-o8cyagtr/: run-o8cyagtr.wandb
experiments/ch2_bandits/outputs/bandit/hydra/rlbook.bandits.EpsilonGreedy/2024-06-12_01-20-03/wandb/run-20240612_012004-o8cyagtr/files/: config.yaml  requirements.txt  wandb-metadata.json
experiments/configs/bandits/: defaults.yaml  test.yaml
notebooks/: RL-greedy_epsilon_bandit.ipynb  log.jupyter
rlbook/: __init__.py  bandits.py  cli.py  testbeds.py
rlbook/bandits/: bandits.py  testbeds.py
scripts/: startup.sh
src/rlbook/: __init__.py
src/rlbook/bandits/: algorithms.py  testbeds.py
streamlit/: ch2_bandits.py
streamlit_apps/: ch2_bandits.py  plotters.py
tests/: __init__.py  test_bandits.py  test_rlbook.py
