[project]
name = "rlbook"
version = "0.1.0"
description = "Walkthrough of rlbook by Sutton and Barto"
authors = [
    {name = "joseph-jnl", email = "1985819+joseph-jnl@users.noreply.github.com"},
]
dependencies = [
    "hydra-core>=1.3.2",
    "numpy>=1.26.3",
    "wandb>=0.16.2",
    "black>=23.12.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
