[project]
name = "rlbook"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "joseph-jnl", email = "1985819+joseph-jnl@users.noreply.github.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "hvplot>=0.10.0",
    "datashader>=0.16.2",
    "hydra-core>=1.3.2",
    "polars>=0.20.31",
    "jax[cuda12]>=0.4.28",
    "jaxtyping>=0.2.29",
    "equinox>=0.11.4",
    "wandb>=0.17.0",
    "jupyterlab>=4.2.2",
    "austin-dist>=3.6.0",
    "plotnine>=0.13.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rlbook"]
