[project]
name = "rlbook"
version = "0.1.0"
description = "Code for my walkthrough of: Reinforcement Learning An Introduction by Richard Sutton and Andrew Barto"
authors = [
    { name = "joseph-jnl", email = "1985819+joseph-jnl@users.noreply.github.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "jaxtyping>=0.2.29",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "hydra-core>=1.3.2",
    "plotnine>=0.13.6",
    "wandb>=0.18.5",
    "austin-dist>=3.7.0",
    "jupyterlab>=4.2.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rlbook"]
